contrast fix

--- a/cedarhillschamber/css/medium.css
+++ b/cedarhillschamber/css/medium.css
@@ -41,7 +41,7 @@
   }
 
   .active a {
-    color: #4B92AA;
+    color: #44869C;
     border-bottom: 2px solid;
   }
 
